--- a/public/contents/index.html
+++ b/public/contents/index.html
@@ -141,7 +141,7 @@
 <div class="summary mb-2">
   
   <h2 class="title-summary"><a href="https://matejsmycka.github.io/personal-web/public/contents/projects/projects/">Projects and work</a></h2>
-  <p></p>
+  <p><p>My work devided by field.</p></p>
 </div>
 
 
