--- a/public/contents/projects/projects/index.html
+++ b/public/contents/projects/projects/index.html
@@ -116,7 +116,8 @@
           
 <h1 class="title">Projects and work</h1>
 <div class="content ">
-  <h3 id="repositaries">Repositaries</h3>
+  <p>My work devided by field.</p>
+<h3 id="programming">Programming</h3>
 <ul>
 <li><a href="https://gitlab.ics.muni.cz/525073">Personal GitLab</a></li>
 <li><a href="https://gitlab.ics.muni.cz/penetration-testing-public">Work GitLab</a></li>
