--- a/public/contents/projects/projects/index.html
+++ b/public/contents/projects/projects/index.html
@@ -124,7 +124,10 @@
 <li><a href="https://github.com/MatejSmycka">Personal GitHub</a></li>
 </ul>
 <h3 id="cybersecurity">Cybersecurity</h3>
-<p><a href="https://www.linkedin.com/in/mat%C4%9Bj-smy%C4%8Dka-7769b6214/details/projects/%22">Projects listed on linkedIn.</a></p>
+<ul>
+<li><a href="https://tryhackme.com/p/matejsmycka">TryHackMe profile</a></li>
+<li><a href="https://www.linkedin.com/in/mat%C4%9Bj-smy%C4%8Dka-7769b6214/details/projects/%22">Projects listed on linkedIn.</a></li>
+</ul>
 <h3 id="art">Art</h3>
 <p><a href="https://www.deviantart.com/user6566454565446/gallery">DevianArt</a></p>
 </div>
