--- a/public/contents/index.html
+++ b/public/contents/index.html
@@ -119,7 +119,7 @@
 <h1 class="title">Overview</h1>
 <div class="content">
   <h2 id="portfolio-tree">Portfolio tree</h2>
-<p>Collection of my work and projects, organized by topic.</p>
+<p>Collection of my work and projects, organized by field of study.</p>
 
 </div>
 
